# fit-framework

./: .gitignore  README.md  makefile  pyproject.toml
.github/workflows/: test.yaml
src/fit_framework/: __init__.py  fit_framework.py
